<?xml version="1.0" encoding="utf-8"?>
<!-- xml κουμπιών για αλληλεπίδραση μετα φίλτρα του shop -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Αναζήτηση -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_hint" />

    <!-- Κατηγορία -->
    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <!-- Φίλτρο προσφορών -->
    <CheckBox
        android:id="@+id/offersCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_offers"
        android:layout_marginTop="8dp" />

    <!-- Φίλτρο διαθεσιμότητας -->
    <CheckBox
        android:id="@+id/availabilityCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_available"
        android:layout_marginTop="4dp" />

    <!-- Επιλογή τιμής -->
    <com.google.android.material.slider.RangeSlider
        android:id="@+id/priceRangeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/priceRangeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_range_label_default"
        android:layout_marginTop="4dp" />

    <!-- Λίστα προϊόντων -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp" />
</LinearLayout>
